# runners

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: allowlist.rs  env.rs  help.rs  main.rs  msg.rs  roster.rs  signal.rs
cli/tests/: roundtrip.rs
crates/runner-core/: Cargo.toml
crates/runner-core/src/: error.rs  lib.rs  model.rs
crates/runner-core/src/event_log/: log.rs  mod.rs  path.rs  ulid.rs
crates/runners-core/: Cargo.toml
crates/runners-core/src/: error.rs  lib.rs
crates/runners-core/src/event_log/: log.rs  mod.rs  path.rs  ulid.rs
design/: runners-design.pen
docs/arch/: v0-arch.md  v0-prd.md
docs/impls/: v0-mvp-c5-5-shared-runners.md  v0-mvp.md
docs/logs/: 2026-04-23-progress.md  2026-04-26-progress.md
docs/tests/: v0-mvp-tests.md
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: cli_install.rs  db.rs  error.rs  lib.rs  main.rs  model.rs
src-tauri/src/commands/: crew.rs  crew_runner.rs  mission.rs  mod.rs  runner.rs  session.rs
src-tauri/src/event_bus/: mod.rs
src-tauri/src/event_log/: log.rs  mod.rs  path.rs  ulid.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/router/: handlers.rs  mod.rs  runtime.rs  tests.rs
src-tauri/src/session/: manager.rs  mod.rs
src/components/: AddSlotModal.tsx  AppShell.tsx  CreateRunnerModal.tsx  EmptyStateCard.tsx  RunnerEditDrawer.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Field.tsx  Overlay.tsx  RuntimeSelect.tsx  runtimes.ts
src/lib/: activeSessions.ts  api.ts  types.ts
src/pages/: CrewEditor.tsx  Crews.tsx  Debug.tsx  Home.tsx  RunnerChat.tsx  RunnerDetail.tsx  Runners.tsx  TeamEditor.tsx  Teams.tsx
