[package]
name = "runners"
version = "0.1.0"
description = "An editor for teams of local coding agents (Claude Code, Codex, and friends)"
authors = ["Jason Wang <yuesihan@gmail.com>"]
edition = "2021"

[lib]
name = "runners_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
ulid = "1"

[dev-dependencies]
tempfile = "3"
