[package]
name = "runners"
version = "0.1.0"
description = "An editor for teams of local coding agents (Claude Code, Codex, and friends)"
edition.workspace = true
authors.workspace = true

[lib]
name = "runners_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runners-core = { path = "../crates/runners-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
# Regular dep (not dev-only) because the sidecar writer needs
# NamedTempFile::persist for a Windows-safe atomic replace.
tempfile = "3"
portable-pty = "0.8"

# Unix-only: SIGTERM/SIGKILL escalation inside SessionManager::kill. Windows
# gets a different path in a future chunk (v0 scope is macOS + Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
