[package]
name = "runner"
version = "0.1.0"
description = "An editor for teams of local coding agents (Claude Code, Codex, and friends)"
edition.workspace = true
authors.workspace = true

[lib]
name = "runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runner-core = { path = "../crates/runner-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
# Regular dep (not dev-only) because the sidecar writer needs
# NamedTempFile::persist for a Windows-safe atomic replace.
tempfile = "3"
portable-pty = "0.8"
# Filesystem watcher for the per-mission event-log tail (C7). The
# `macos_fsevent` backend is the default on macOS; on Linux it falls back to
# inotify, on Windows to ReadDirectoryChangesW.
notify = "6"

# Unix-only: SIGTERM/SIGKILL escalation inside SessionManager::kill. Windows
# gets a different path in a future chunk (v0 scope is macOS + Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
