[package]
name = "runners-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Shared types and event-log primitives for the Runners app and CLI."

[lib]
name = "runners_core"

[dependencies]
chrono = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
